; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_dirac_parser.c_dirac_parse.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_dirac_parser.c_dirac_parse.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32, %struct.TYPE_6__* }
%struct.TYPE_6__ = type { i32 }

@PARSER_FLAG_COMPLETE_FRAMES = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_7__*, i32*, i32**, i32*, i32*, i32)* @dirac_parse to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dirac_parse(%struct.TYPE_7__* %0, i32* %1, i32** %2, i32* %3, i32* %4, i32 %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca %struct.TYPE_7__*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32**, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  %14 = alloca %struct.TYPE_6__*, align 8
  %15 = alloca i32, align 4
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %8, align 8
  store i32* %1, i32** %9, align 8
  store i32** %2, i32*** %10, align 8
  store i32* %3, i32** %11, align 8
  store i32* %4, i32** %12, align 8
  store i32 %5, i32* %13, align 4
  %16 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  %17 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %16, i32 0, i32 1
  %18 = load %struct.TYPE_6__*, %struct.TYPE_6__** %17, align 8
  store %struct.TYPE_6__* %18, %struct.TYPE_6__** %14, align 8
  %19 = load i32**, i32*** %10, align 8
  store i32* null, i32** %19, align 8
  %20 = load i32*, i32** %11, align 8
  store i32 0, i32* %20, align 4
  %21 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  %22 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 8
  %24 = load i32, i32* @PARSER_FLAG_COMPLETE_FRAMES, align 4
  %25 = and i32 %23, %24
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %27, label %33

27:                                               ; preds = %6
  %28 = load i32, i32* %13, align 4
  store i32 %28, i32* %15, align 4
  %29 = load i32*, i32** %12, align 8
  %30 = load i32**, i32*** %10, align 8
  store i32* %29, i32** %30, align 8
  %31 = load i32, i32* %13, align 4
  %32 = load i32*, i32** %11, align 8
  store i32 %31, i32* %32, align 4
  br label %56

33:                                               ; preds = %6
  %34 = load %struct.TYPE_6__*, %struct.TYPE_6__** %14, align 8
  %35 = load i32*, i32** %12, align 8
  %36 = load i32, i32* %13, align 4
  %37 = call i32 @find_frame_end(%struct.TYPE_6__* %34, i32* %35, i32 %36)
  store i32 %37, i32* %15, align 4
  %38 = load %struct.TYPE_6__*, %struct.TYPE_6__** %14, align 8
  %39 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %38, i32 0, i32 0
  %40 = load i32, i32* %39, align 4
  %41 = icmp ne i32 %40, 0
  br i1 %41, label %47, label %42

42:                                               ; preds = %33
  %43 = load i32, i32* %15, align 4
  %44 = icmp eq i32 %43, -1
  br i1 %44, label %45, label %47

45:                                               ; preds = %42
  %46 = load i32, i32* %13, align 4
  store i32 %46, i32* %7, align 4
  br label %62

47:                                               ; preds = %42, %33
  %48 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  %49 = load i32*, i32** %9, align 8
  %50 = load i32, i32* %15, align 4
  %51 = call i64 @dirac_combine_frame(%struct.TYPE_7__* %48, i32* %49, i32 %50, i32** %12, i32* %13)
  %52 = icmp slt i64 %51, 0
  br i1 %52, label %53, label %55

53:                                               ; preds = %47
  %54 = load i32, i32* %13, align 4
  store i32 %54, i32* %7, align 4
  br label %62

55:                                               ; preds = %47
  br label %56

56:                                               ; preds = %55, %27
  %57 = load i32*, i32** %12, align 8
  %58 = load i32**, i32*** %10, align 8
  store i32* %57, i32** %58, align 8
  %59 = load i32, i32* %13, align 4
  %60 = load i32*, i32** %11, align 8
  store i32 %59, i32* %60, align 4
  %61 = load i32, i32* %15, align 4
  store i32 %61, i32* %7, align 4
  br label %62

62:                                               ; preds = %56, %53, %45
  %63 = load i32, i32* %7, align 4
  ret i32 %63
}

declare dso_local i32 @find_frame_end(%struct.TYPE_6__*, i32*, i32) #1

declare dso_local i64 @dirac_combine_frame(%struct.TYPE_7__*, i32*, i32, i32**, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
